# monzo-webhook-schema

./: .gitignore  Makefile  README.md  pyproject.toml  test.py
.github/workflows/: tests.yml
examples/: dump_schema.py  test.py
monzo_webhook/: __init__.py  merchant.py  model.py  schema.py  types.py
monzo_webhook/transaction_schemes/: __init__.py  faster_payments.py  mastercard.py  monzo_pot.py  p2p.py
