[tool.poetry]
name = "monzo_webhook"
version = "0.1.0"
description = "Schema for Monzo API Webhook"
authors = ["Dan Trickey <github@trickey.io>"]
license = "LGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-isort = "*"
flake8-mutable = "*"
flake8-todo = "*"
mypy = "*"
rope = "*"
isort = {version = "*",extras = ["pyproject"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
